# artv-audio

./: .clang-format  .gitignore  3RD-PARTY-LICENSES  CMakeLists.txt  LICENSE  README.md  TODO  changelog-mixmaxtrix  changelog-turbopaco  mingw-w64-x86_64.toolchain.cmake  octave_cheatsheet.md
.github/workflows/: cmake.yml
headless/mix-maxtrix/: main.cpp  run_all_fx.hpp
misc/: README.md
misc/bash/: github-release-rename.sh  toggle-vst3-symlink.sh
misc/howto/: Wine-GDB-server.md
misc/jsfx-drafts/: ArtvSplitter2  Experiments.jsfx  FunkyCrossover2  _complex.jsfx-inc  _core.jsfx-inc  _delay-line.jsfx-inc  _dynamics.jsfx-inc  _easy_allpass_reverb.jsfx-inc  _easy_fdn.jsfx-inc  _fft-big.jsfx-inc  _fft.jsfx-inc  _filters.jsfx-inc  _fir.jsfx-inc  _lfo.jsfx-inc  _resampler.jsfx-inc  _reverb.jsfx-inc  coeffs.py  datorro-progenitor.jsfx  dre2000-a.jsfx  dre2000-b.jsfx  dre2000-c.jsfx  dre2000-d.jsfx  ducker.jsfx  easyverb-plate1.jsfx  fdn-fb-downsample-algo2.jsfx  fdn-fb-downsample.jsfx  fdn-fb.jsfx  fdn.jsfx  fft_shift.jsfx  filt-demo.jsfx  fir.jsfx  lofiverb-chorus1.jsfx  lofiverb-chorus2.jsfx  lofiverb-reverb.8.jsfx  lofiverb-reverb1.jsfx  lofiverb-reverb10.jsfx  lofiverb-reverb11.jsfx  lofiverb-reverb12.jsfx  lofiverb-reverb13.jsfx  lofiverb-reverb2.jsfx  (+21 more)
misc/octave/: octave_cheatsheet.md
misc/python/: lin_eq_freq_q_tuning.py  sym_skew_hadamard.py
misc/scipy/: curve-fit.py  reverb.py
misc/simpy/: partial-frac.py
misc/sympy/: 2order-tpt.py  approximation.py  multinotch.py  mystran-sigmoid.py  peaking-poles-zeros.py  square-eq.py  tanh_vaneev.py
patches/juce/: 0001-Slider-Add-fine-scrolling.patch
patches/soundtouch/: 0001-Remove-problematic-flags.patch
resources/fonts/: CMakeLists.txt  OpenSans-Bold.ttf.cpp  OpenSans-Bold.ttf.hpp  PassionsConflict-Regular.ttf.cpp  PassionsConflict-Regular.ttf.hpp  README  serialize-font.sh  update-cmake.sh
scripts/: fir-oversampling.py  pysr-curve-fit.py
src/artv-common/dsp/: types.hpp
src/artv-common/dsp/airwindows/: all_consoles.hpp  busscolors4.hpp  channel4.hpp  channel9.hpp  console4.hpp  console5.hpp  console6.hpp  console7.hpp  density2.hpp  focus.hpp  template.hpp
src/artv-common/dsp/chokehold/: bus_comp.hpp  consolidator.hpp  gate_expander.hpp  signal_crusher.hpp  track_comp.hpp
src/artv-common/dsp/chow/: phaser.hpp
src/artv-common/dsp/dragonfly/: compilation_firewalls.hpp  dragonfly_er_cfirewall.cpp  dragonfly_hall_cfirewall.cpp  dragonfly_plate_cfirewall.cpp  dragonfly_room_cfirewall.cpp  early_reflections.hpp  hall.hpp  plate.hpp  room.hpp
src/artv-common/dsp/geraintluff/: atlantis_reverb.hpp  echo_cycles.hpp  ripple.hpp  sandwitch_amp.hpp  spring_box.hpp
src/artv-common/dsp/jsfx_engine/: jsfx_engine.cpp  jsfx_engine.hpp
src/artv-common/dsp/liteon/: butterworth_24dB.hpp  moog_24db.hpp  nonlinear.hpp  presence_eq.hpp  pseudostereo.hpp  shelving_filter.hpp  sonic_enhancer.hpp  stereotilt.hpp  tilteq.hpp  tubeharmonics.hpp
src/artv-common/dsp/ljkb/: luftikus.hpp
src/artv-common/dsp/nitsuj/: reeq.hpp
src/artv-common/dsp/own/: delay_line.hpp  fir.hpp  jsfx.hpp  oversampled.hpp  oversampled_coeffs.hpp  polyphase-fir.hpp  stereo_processor.hpp  stereo_summing_processor.hpp  wdl_fft.hpp
src/artv-common/dsp/own/classes/: _README.md  add_ducker.hpp  block_resampler.hpp  circular_queue.hpp  control_rate.hpp  crossover.hpp  delay_line.hpp  diffusion_matrix.hpp  ducker.hpp  fdn_stereo_8.hpp  fft.hpp  fir.hpp  jsfx.hpp  linphase_iir_crossover.hpp  lr_crossover.hpp  misc.hpp  mix.hpp  mufft.hpp  noise.hpp  oversampled.hpp  oversampled_coeffs.hpp  pffft.hpp  pitch_shift.hpp  plugin_context.hpp  ramp.hpp  reverb_tools.hpp  soras-hiir-wrapper.hpp  stereo_processor.hpp  stereo_summing_processor.hpp  transient_gate.hpp  value_smoother.hpp  wdl_fft.hpp  window.hpp  windowed_sync.hpp  wonky_crossover.hpp
src/artv-common/dsp/own/fx/: _README.md  diffuse_delay.hpp  eq4x.hpp  experiments.hpp  filter2x.hpp  lin_eq4x.hpp  mod.hpp  (+12 more)
src/artv-common/dsp/rubberband/: rubberband.hpp
src/artv-common/dsp/saike/: smooth.hpp  stereo_bub2.hpp  stereo_bub3.hpp  tanh_aa.hpp  tight_compressor.hpp  transience.hpp
src/artv-common/dsp/shabtronic/: fdn_verb.hpp
src/artv-common/dsp/smashed_transistors/: ze_big_chorus3.hpp  ze_little_scanner_chorus.hpp
src/artv-common/dsp/sonic_anomaly/: bass_professor1.hpp  slax.hpp  transpire.hpp  vola2.hpp
src/artv-common/dsp/soundtouch/: soundtouch.hpp
src/artv-common/dsp/sstillwell/: 1175.hpp  4x4.hpp  eventhorizon2.hpp  fairlychildish.hpp  hugebooty.hpp  majortom.hpp  mastertom.hpp  rbj1073.hpp
src/artv-common/dsp/tal/: reverb2.hpp
src/artv-common/dsp/witti/: bbd_echo.hpp  bbd_echo_stereo.hpp
src/artv-common/juce/: effect_base.hpp  gui_util.hpp  look_and_feel.hpp  math.hpp  parameter_definitions.hpp  parameter_types.hpp  parameters.hpp  plugin_context.hpp  value_string_wrappers.hpp  value_tree_attachments.hpp  widgets.hpp
src/artv-common/misc/: approximations.hpp  bits.hpp  compiler.hpp  comptime_string.hpp  delay_compensation_buffers.hpp  fixed_point.hpp  float.hpp  hana.hpp  interpolation.hpp  math.hpp  midi.hpp  misc.hpp  mp11.hpp  num.hpp  overaligned_allocator.hpp  primes.hpp  primes_table.hpp  random_table.hpp  range.hpp  ratio.hpp  short_ints.hpp  simd.hpp  simd_complex.hpp  typelist.hpp  util.hpp  vec.hpp  vec_approx_math.hpp  vec_bits.hpp  vec_complex.hpp  vec_math.hpp  vec_util.hpp  xspan.hpp
src/lofiverb/: editor.cpp  logo.hpp  parameters.hpp  processor.cpp
src/mix-maxtrix/: README.md  buffers.hpp  crossover.hpp  editor.cpp  lin_crossover.hpp  linphase_iir_crossover.hpp  look_and_feel.hpp  order_and_buffering.hpp  parameters.hpp  presets.hpp  processor.cpp  transient_crossover.hpp  wonky_crossover.hpp
src/oversampler-util/: README.md  main.cpp
src/turbopaco/: README.md  editor.cpp  look_and_feel.hpp  parameters.hpp  processor.cpp
test/common/: butterworth_simd.cpp  delay_compensation_buffers.cpp  fft.cpp  fixed_point.cpp  float.cpp  lofiverb.cpp  simd.cpp  simd_block_test.hpp  svf_simd.cpp  turbopaco.cpp
test/mix-maxtrix/: order_and_buffering.cpp  smoke.cpp
(+87 files in other folders)
